spectec/test/elab/neg/parse-unclosed-block-comment.spectec
;; A block comment opens with `(;` but never closes with `;)`.

(; this never closes
